5.4.2
- bug fix for [ jailer-Bugs-3294893 ] Outer Join for selecting dependant entries and Oracle 10
  mixing left joins and theta-style joins caused problems on oracle DBMS      	

5.4.1
  - add ability to just generate the delete script, skip export (thanks to Jason Pell)
  - improved responsiveness when SQL exception occurs.

5.4
  - Fixed an issue with exporting dependencies of Initial Tables. (thanks to Teddy Widom, https://sourceforge.net/p/jailer/discussion/700499/thread/60e83aef/)
  - -scope "LOCAL_DATABASE" now supports the pseudo-columns $DISTANCE and $IS_SUBJECT.
  - Support for multiple subject-tables has been added. 

5.3.2
  - Files with ".sql.zip" suffix are no longer created GZIP files but ZIP files.

5.3.1
  - "Data Export" dialog now have a "Cancel" button.
  - An NPE occurred if the data model is empty.
  - Statistics were collected for the remote database instead for the local when using "-scope LOCAL_DATABASE".

5.3
  - The Data Browser now offers a "Data Export" feature.

5.2.1
  - minor improvements.

5.2
  - Added "Closure View" and "Closure Border View" tools.

5.1
  - Better UI and improved navigation.

5.0.2
  - Viewing contents of CLOB and XML column types 

5.0.1
  - Unicode support.

5.0
  - Ability to collect rows in a separate embedded database.
    This allows it to export data from read-only databases.

4.4
  - internal refactorings.

4.3.9
  - don't write empty lob files for liquibase export. (thanks to Jason Pell)

4.3.8
  - fix for for liquibase BLOB export. (thanks to Jason Pell)

4.3.7
  - refinements to timestamp, date, time format mask config for liquibase export. (thanks to Jason Pell)

4.3.6
  - fixed a bug concerning CLOB export in Liquibase format. (thanks to Jason Pell)

4.3.5
  - added support for ARRAY type.

4.3.4
  - Workaround for http://bugs.mysql.com/bug.php?id=47108

4.3.3
  - Fix for http://sourceforge.net/p/dbeauty/tickets/4/

4.3.2
  - Fix for http://sourceforge.net/p/dbeauty/tickets/3/

4.3.1